# learningC-C

./: README.md
Change-Wallpaper-main/: README.md  main.cpp
Jpg_to_Png-main/: CMakeLists.txt  FileCreater.cpp  FileCreater.h  README.md  convert.h  main.cpp
Project-main/: CMakeLists.txt  README.md  addlog.h  chartxy.cpp  chartxy.h  chartxy.ui  dialog.ui  information.cpp  information.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parserMath.h  photo.qrc  picture.qrc  screenmenu.cpp  screenmenu.h  screenmenu.ui
